# CAPEX

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  style.yml  tests.yml
configs/: attacks.yaml  devices.yaml
scripts/: merge_ce_flows.py  run.sh  run_flows.sh
scripts/oldCapScripts/: conceptDriftCap.py  multiAttackRunner.py  testMulti.py
src/capex/: __main__.py  capture.py  cli.py  conceptDriftCap.py  config.py  exceptions.py  hulk.py  logging_utils.py  models.py  paths.py  runner.py  scheduler.py  validation.py
src/capex/attacks/: base.py  builtins.py  hulk.py  registry.py
src/capex/services/: capture_session.py
tests/: test_cli.py  test_models.py  test_registry.py  test_scheduler.py  test_smoke.py  test_validation.py
