[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "capex"
version = "1.0.4"
description = "Config-driven network attack capture orchestration for security research"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Seth Barrett" }
]
dependencies = [
  "PyYAML>=6.0.2",
  "pydantic>=2.11.0",
]

[project.scripts]
capex = "capex.cli:main"

[dependency-groups]
lint = [
  "ruff>=0.15.9",
]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=6.0.0",
]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  "deptry>=0.25.1",
  "twine>=6.2.0",
]
scripting = [
    "cicflowmeter",
    "pandas==3.0.2",
]

[tool.uv.sources]
cicflowmeter = { git = "https://github.com/sethbarrett50/cicflowmeter" }

[tool.hatch.build.targets.wheel]
packages = ["src/capex"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.deptry]
root = ["src", "scripts"]

[tool.deptry.per_rule_ignores]
DEP003 = ["capex"]
DEP004 = ["pandas"]
